# django-async-manager

./: .gitignore  .pre-commit-config.yaml  README.md  manage.py  pyproject.toml  setup.py
.github/workflows/: ci.yaml
django_async_manager/: decorators.py  scheduler.py  settings.py  worker.py
django_async_manager/management/commands/: run_scheduler.py
django_async_manager/tests/: test_scheduler.py
task_queue/: apps.py  decorators.py  models.py  scheduler.py  worker.py
task_queue/management/commands/: run_scheduler.py  run_worker.py  update_beat_schedule.py
task_queue/migrations/: 0001_initial.py  0002_crontabschedule_periodictask.py  0002_remove_task_parent_task_task_dependencies_and_more.py
task_queue/tests/: factories.py  test_decorator.py  test_models.py  test_run_scheduler.py  test_run_worker.py  test_scheduler.py  test_update_beat_schedule.py  test_worker.py
task_queue/tests/test_models/: test_crontab_schedule.py  test_periodic_task.py  test_task.py
